<resources>
    <string name="app_name">My SRC</string>
    <string name="Scan">Scan</string>
    <string name="Turn_On_Location">موقعیت خود را روشن کنید.</string>
    <string name="config">Config</string>
    <string name="sync">همگام‌سازی</string>

    <string name="font_iransanz">fonts/IRANSansMobile.ttf</string>
    <string name="font_iransanz_bold">fonts/IRANSansMobile_Bold.ttf</string>

    <string name="sec_code">کد امنیتی</string>
    <string name="administator_panel">کاربر نصاب</string>
    <string name="enter">ورود</string>
    <string name="ip_address">Ip Address</string>
    <string name="port">Port</string>
    <string name="device_name">نام دستگاه</string>
    <string name="device_id">شماره سریال دستگاه</string>
    <string name="show_device_pw">نمایش رمز دستگاه</string>
    <string name="reset_device">تنظیم مجدد دستگاه</string>
    <string name="show_remote">نمایش ریموت</string>
    <string name="wifi_off">شبکه خاموش است.</string>
    <string name="smart_control_parking_door">کنترل هوشمند درب پارکینگ</string>
    <string name="sadjad_research_center">مرکز تحقیقات سجاد</string>
    <string name="wifi_massage_OK">ارتباط با سیستم برقرار می‌باشد.</string>
    <string name="wifi_massage_ERROR">ارتباط با سیستم امکان‌پذیر نیست.</string>
    <string name="wifi_massage_Connecting">در حال ارتباط با سیستم...</string>
    <string name="msg_near_to_connect">*لطفا برای اتصال به درب پارکینگ به آن نزدیک شوید.</string>
    <string name="msg_time_for_apply_control">*به طور معمول بازکردن یا بستن درب در حدود ۱۰ ثانیه به طول می‌انجامد.</string>
    <string name="massage">پیام</string>
    <string name="please_enter_sec_code">لطفا کد امنیتی را وارد نمایید:</string>
    <string name="reset_factory">بازگشت به تنظیمات کارخانه</string>
    <string name="set_remote">تنظیمات ریموت</string>
    <string name="main_setting_device">تنظیمات اصلی دستگاه</string>
    <string name="msg_for_reset_device">برای ریست دستگاه کلمه‌ی Reset را در کادر زیر بنویسید و دکمه ریست را بفشارید.</string>
    <string name="title_reset_factory">ریست دستگاه</string>
    <string name="reset">ریست</string>
    <string name="reset_en">Reset</string>
    <string name="reset_device_successfully">دستگاه ریست شد.</string>
    <string name="msg_for_show_did">برای کپی کردن متن دست خود را روی شماره سریال نگه دارید.</string>
    <string name="copy_text">کپی شد.</string>
    <string name="not_find_devcie">درب اتوماتیک قابل شناسایی نیست.</string>
    <string name="enter_reset">لطفا reset را وارد کنید.</string>

    <string name="close_door">بستن درب</string>
    <string name="stop_door">نگه‌داشتن درب</string>
    <string name="open_door">باز کردن درب</string>

    <string name="door_status">وضعیت درب</string>
    <string name="door_status_getting">در حال گرفتن وضعیت در...</string>
    <string name="door_status_unknow">وضعیت درب نامعلوم است...</string>
    <string name="door_status_closing">درب پارکینگ هم اکنون در حال بسته شدن می‌باشد...</string>
    <string name="door_status_opening">درب پارکینگ هم اکنون در حال باز شدن می‌باشد...</string>
    <string name="door_status_opened">درب پارکینگ کاملا باز می‌باشد...</string>
    <string name="door_status_closed">درب پارکینگ کاملا بسته می‌باشد...</string>
    <string name="door_status_stoped">درب پارکینگ متوقف شد...</string>
    <string name="setting">تنظیمات</string>
    <string name="number_100"></string>
    <string name="iRemote">ریموت های من</string>
    <string name="get_setting">دریافت تنظیمات</string>
    <string name="send_setting">ارسال تنظیمات</string>
    <string name="not_access_to_add_remote">این قابلیت هنوز به برنامه اضافه نشده است.</string>
    <string name="add_remote">اضافه کردن ریموت</string>
    <string name="setting_description">توضیحات تنظیم</string>
    <string name="setting_tittle">عنوان تنظیم</string>
    <string name="back">بازگشت</string>
    <string name="save_and_back">ذخیره و بازگشت</string>
    <string name="remote">ریموت</string>
    <string name="delete">حذف</string>
    <string name="delete_remote">حذف ریموت</string>
    <string name="no_set">عدم تنظیم</string>


    <array name="setting_option">
        <item>زمان باز شدن درب ۱</item>
        <item>زمان باز شدن درب ۲</item>
        <item>زمان بسته شدن درب ۱</item>
        <item>زمان بسته شدن درب ۲</item>
        <item>زمان دور آهسته در باز شدن درب ۱</item>
        <item>زمان دور آهسته در باز شدن درب ۲</item>
        <item>زمان دور آهسته در بسته شدن درب ۱</item>
        <item>زمان دور آهسته در بسته شدن درب ۲</item>
        <item>زمان استارت با دور آهسته درب ۱</item>
        <item>زمان استارت با دور آهسته درب ۲</item>
        <item>تنظیم سرعت اصلی درب ۱</item>
        <item>تنظیم سرعت اصلی درب ۲</item>
        <item>تنظیم سرعت آهسته درب ۱</item>
        <item>تنظیم سرعت آهسته درب ۲</item>
        <item>تنظیم سرعت استارت اولیه درب ۱</item>
        <item>تنظیم سرعت استارت اولیه درب ۲</item>
        <item>بسته شدن خودکار</item>
        <item>زمان بسته شدن خودکار پس از عبور از چشمی</item>
        <item>تاخیر در باز شدن درب ۲</item>
        <item>تاخیر در بسته شدن درب ۱</item>
        <item>درب تک لنگه</item>
        <item>فشار نهایی در بسته شدن</item>
        <item>زمان فشار نهایی در بسته شدن</item>
    </array>


    <array name="setting_option_description">
        <item>زمان باز شدن درب ۱</item>
        <item>زمان باز شدن درب ۲</item>
        <item>زمان بسته شدن درب ۱</item>
        <item>زمان بسته شدن درب ۲</item>
        <item>زمان دور آهسته در باز شدن درب ۱</item>
        <item>زمان دور آهسته در باز شدن درب ۲</item>
        <item>زمان دور آهسته در بسته شدن درب ۱</item>
        <item>زمان دور آهسته در بسته شدن درب ۲</item>
        <item>زمان استارت با دور آهسته درب ۱</item>
        <item>زمان استارت با دور آهسته درب ۲</item>
        <item>تنظیم سرعت اصلی درب ۱</item>
        <item>تنظیم سرعت اصلی درب ۲</item>
        <item>تنظیم سرعت آهسته درب ۱</item>
        <item>تنظیم سرعت آهسته درب ۲</item>
        <item>تنظیم سرعت استارت اولیه درب ۱</item>
        <item>تنظیم سرعت استارت اولیه درب ۲</item>
        <item>بسته شدن خودکار</item>
        <item>زمان بسته شدن خودکار پس از عبور از چشمی</item>
        <item>تاخیر در باز شدن درب ۲</item>
        <item>تاخیر در بسته شدن درب ۱</item>
        <item>درب تک لنگه</item>
        <item>فشار نهایی در بسته شدن</item>
        <item>زمان فشار نهایی در بسته شدن</item>
    </array>


</resources>
