<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_inst"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="ir.suom.srs.seyedmoin.srcremote.Inst_Panel.Inst_Act">

    <include layout="@layout/layout_action_bar" />

    <LinearLayout
        android:id="@+id/activity_panel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/tv_main_setting_device"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_setting_device"
            android:textColor="@color/black"
            android:textSize="17dp" />

        <Button
            android:id="@+id/btn_option_1"
            style="@style/btn_clickable_hover"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/reset_device"
            android:textColor="@color/white"
            android:textSize="17dp" />

        <Button
            android:id="@+id/btn_option_2"
            style="@style/btn_clickable_hover"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/reset_factory"
            android:textColor="@color/white"
            android:textSize="17dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_option_3"
            style="@style/btn_clickable_hover"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/show_device_pw"
            android:textColor="@color/white"
            android:textSize="17dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_option_4"
            style="@style/btn_clickable_hover"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/set_remote"
            android:textColor="@color/white"
            android:textSize="17dp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>
