<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/edit_name"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="15dp"
    android:background="@drawable/dialog_bg"
    android:gravity="right"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/tv_title_reset_device"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_reset_factory"
        android:textColor="@color/black"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/tv_for_reset_device"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/msg_for_reset_device"
        android:textColor="@color/black"
        android:textSize="13dp" />

    <EditText
        android:id="@+id/et_reset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:background="@android:color/transparent"
        android:cursorVisible="false"
        android:maxLength="5"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textColorHint="@color/text_black"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="15dp"
        android:background="@color/grey400" />

    <Button
        android:id="@+id/btn_reset_factory"
        style="@style/btn_hover"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/reset"
        android:textColor="@color/white"
        android:textSize="17sp" />

</LinearLayout>