<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_start_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ir.suom.srs.seyedmoin.srcremote.StartPage">

    <!-- <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/animation_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="center"
         app:lottie_autoPlay="true"
         app:lottie_fileName="data_bi_font.json"
         app:lottie_loop="false" />-->

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/start_gif"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitCenter" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="50dp"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/tv_turn_on_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/Turn_On_Location"
            android:textColor="@color/text_black"
            android:visibility="invisible" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:layout_gravity="bottom|center"
            android:layout_marginTop="20dp"
            android:paddingLeft="25dp"
            android:paddingRight="25dp">

            <TextView
                android:id="@+id/tv_wifi_off"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/wifi_off"
                android:textColor="@color/text_black"
                android:visibility="invisible" />

            <Button
                android:id="@+id/btn_scanBarcode"
                style="@style/btn_hover"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/sync"
                android:textColor="@color/white"
                android:visibility="invisible" />
        </FrameLayout>

    </LinearLayout>

</FrameLayout>
