<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_action_bar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp">

        <ImageView
            android:id="@+id/iv_icon"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="left"
            android:layout_marginTop="6dp"
            android:onClick="Action_Administorator"
            android:src="@mipmap/ic_launcher" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|right"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_control_smart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/smart_control_parking_door"
                android:textColor="@color/black"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/tv_sadjad_research_center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="5dp"
                android:text="@string/sadjad_research_center"
                android:textColor="@color/title_black"
                android:textSize="20dp" />

        </LinearLayout>

    </FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:background="@color/grey400" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_massage_wifi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wifi_massage_OK"
            android:textColor="@color/green_text"
            android:textSize="13sp"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/iv_massage_wifi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:src="@drawable/ic_check_circle"
            android:visibility="invisible" />
    </LinearLayout>

</LinearLayout>